
** Build-related

  Work around a build failure when using buggy <sys/capability.h>.
  Alternatively, configure with --disable-libcap.

  Compilation would fail on systems using glibc-2.7..2.9 due to changes in
  gnulib's wchar.h that tickled a bug in at least those versions of glibc's
  own <wchar.h> header.  Now, gnulib works around the bug in those older
  glibc <wchar.h> headers.


* Noteworthy changes in release 8.3 (2010-01-07) [stable]

** Bug fixes

  cp -p, install -p, mv, and touch -c could trigger a spurious error
  message when using new glibc coupled with an old kernel.
  [bug introduced in coreutils-6.12].

  ls -l --color no longer prints "argetm" in front of dangling
  symlinks when the 'LINK target' directive was given to dircolors.
  [bug introduced in fileutils-4.0]

  pr's page header was improperly formatted for long file names.
  [bug introduced in coreutils-7.2]

  rm -r --one-file-system works once again.
  The rewrite to make rm use fts introduced a regression whereby
  a commmand of the above form would fail for all subdirectories.
  [bug introduced in coreutils-8.0]

  stat -f recognizes more file system types: k-afs, fuseblk, gfs/gfs2, ocfs2,
  and rpc_pipefs. Also Minix V3 is displayed correctly as minix3, not minux3.
  [bug introduced in coreutils-8.1]

  tail -f (inotify-enabled) once again works with remote files.
  The use of inotify with remote files meant that any changes to those
  files that was not done from the local system would go unnoticed.
  [bug introduced in coreutils-7.5]

  tail -F (inotify-enabled) would abort when a tailed file is repeatedly
  renamed-aside and then recreated.
  [bug introduced in coreutils-7.5]

  tail -F (inotify-enabled) could fail to follow renamed files.
  E.g., given a "tail -F a b" process, running "mv a b" would
  make tail stop tracking additions to "b".
  [bug introduced in coreutils-7.5]

  touch -a and touch -m could trigger bugs in some file systems, such